--- a/apps.json
+++ b/apps.json
@@ -3,7 +3,7 @@
     "id": "netmirror",
     "name": "NetMirror",
     "description": "Netmirror: Free Netflix Clone with Lightning-Fast Streams\n\nExperience Netflix's sleek UI and endless library of movies, series, and originals, all for free! Dive into personalized recommendations, HD/4K buffering-free playback, and offline downloads. No subscriptions, no ads. Stream smarter on any device.\n\nYour binge session awaits. Download now! 🎬",
-    "icon": "https://upload.wikimedia.org/wikipedia/commons/0/08/Netflix_2015_logo.svg",
+    "icon": "https://cdn-www.bluestacks.com/bs-images/Icon_app.netmirror.netmirrornew.jpg",
     "version": "3.0",
     "latestVersion": "3.0",
     "downloadUrl": "https://github.com/RookieEnough/Orion-Data/raw/main/APKs/NetMirrorapp.netmirror.netmirrornewv3.0.apk",
@@ -21,7 +21,7 @@
     "id": "yt-music-revanced",
     "name": "YouTube Music ReVanced",
     "description": "Elevate your audio game with YouTube Music's full premium suite ad-free streaming, offline downloads, background play, and high-fidelity sound all unlocked for free. Explore endless tracks, custom mixes, podcasts, and live stations in a buttery-smooth interface. No subs, no skips.\n\nTune in to freedom. Download today! 🎵",
-    "icon": "https://upload.wikimedia.org/wikipedia/commons/6/6a/Youtube_Music_icon.svg",
+    "icon": "https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/Youtube_Music_icon.svg/2048px-Youtube_Music_icon.svg.png",
     "version": "8.15.52",
     "latestVersion": "8.15.52",
     "downloadUrl": "https://github.com/RookieEnough/Orion-Data/raw/main/APKs/YouTube_Musicapp.revanced.android.apps.youtube.musicv8.15.52.apk",
@@ -39,7 +39,7 @@
     "id": "google-photos-revanced",
     "name": "Google Photos ReVanced",
     "description": "Relive every moment without limits. ReVanced Google Photos spoofs your device as a Pixel 6 for free unlimited original-quality backups of photos and videos. Enjoy seamless search, AI edits, shared albums, and offline access in the familiar, polished UI. No root, no fees, just endless space.\n\nCapture forever, store smarter. Download now! 📸",
-    "icon": "https://upload.wikimedia.org/wikipedia/commons/c/ca/Google_Photos_icon.svg",
+    "icon": "https://static0.xdaimages.com/wordpress/wp-content/uploads/2020/06/new-google-photos-logo.jpg",
     "version": "7.43.0",
     "latestVersion": "7.43.0",
     "downloadUrl": "https://github.com/RookieEnough/Orion-Data/releases/download/Photosapp/Photosapp.revanced.v7.43.0.801018619.apk",
@@ -57,7 +57,7 @@
     "id": "youtube-revanced",
     "name": "YouTube ReVanced",
     "description": "Transform your YouTube into a premium powerhouse: block ads, enable background playback, download videos offline, restore dislikes, and swipe for seamless controls. Enjoy SponsorBlock, minimized viewing, and crystal-clear quality without a dime. Dive into infinite content, interruption-free.\n\nWatch without limits. Get ReVanced now! 📱",
-    "icon": "https://upload.wikimedia.org/wikipedia/commons/0/09/YouTube_full-color_icon_%282017%29.svg",
+    "icon": "https://cdn3.iconfinder.com/data/icons/social-network-30/512/social-06-512.png",
     "version": "20.14.43",
     "latestVersion": "20.14.43",
     "downloadUrl": "https://github.com/RookieEnough/Orion-Data/releases/download/YT/YouTube_ReVancedapp.revanced.android.youtubev20.14.43.apk",
