--- a/apps.json
+++ b/apps.json
@@ -39,7 +39,7 @@
     "id": "google-photos-revanced",
     "name": "Google Photos ReVanced",
     "description": "Relive every moment without limits. ReVanced Google Photos spoofs your device as a Pixel 6 for free unlimited original-quality backups of photos and videos. Enjoy seamless search, AI edits, shared albums, and offline access in the familiar, polished UI. No root, no fees, just endless space.\n\nCapture forever, store smarter. Download now! 📸",
-    "icon": "https://static0.xdaimages.com/wordpress/wp-content/uploads/2020/06/new-google-photos-logo.jpg",
+    "icon": "https://static.vecteezy.com/system/resources/previews/022/484/504/non_2x/google-photo-icon-logo-symbol-free-png.png",
     "version": "7.43.0",
     "latestVersion": "7.43.0",
     "downloadUrl": "https://github.com/RookieEnough/Orion-Data/releases/download/Photosapp/Photosapp.revanced.v7.43.0.801018619.apk",
