--- a/apps.json
+++ b/apps.json
@@ -145,7 +145,7 @@
     "id": "instafel",
     "name": "InstaFel",
     "description": "A feature-rich Instagram mod offering ad-free browsing, media downloading, privacy features, and customization options. Keep your feed clean and your media saved.",
-    "icon": "https://github.com/mamiiblt.png",
+    "icon": "https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Instagram_logo_2022.svg/1200px-Instagram_logo_2022.svg.png",
     "version": "1.0",
     "latestVersion": "1.0",
     "downloadUrl": "#",
