--- a/apps.json
+++ b/apps.json
@@ -89,21 +89,66 @@
     ]
   },
   {
-    "id": "X-revanced",
+    "id": "x-revanced",
     "name": "X ReVanced",
-    "description": "Reclaim your feed with X (formerly Twitter) ReVanced – unlock ad-free browsing, video/image downloads, hidden recommendations, and premium features like dynamic theming and sanitized links. Swipe through tweets, trends, and DMs in a customized, interruption-free paradise. No subs, no spam.Tweet boldly, scroll endlessly. Install now! 🐦",
+    "description": "The X app is the trusted global digital town square for everyone. ReVanced X removes ads and promoted posts for a clean timeline.",
     "icon": "https://img.freepik.com/free-vector/new-2023-twitter-logo-x-icon-design_1017-45418.jpg",
-    "version": "11.20.0",
-    "latestVersion": "11.20.0",
-    "downloadUrl": "https://github.com/RookieEnough/Orion-Data/releases/download/X/Xcom.twitter.androidv11.20.0-release.0.apk",
-    "repoUrl": "https://github.com/crimera/piko",
-    "category": "Soical",
+    "version": "1.0.0",
+    "latestVersion": "1.0.0",
+    "downloadUrl": "#",
+    "repoUrl": "https://github.com/revanced",
+    "githubRepo": "krvstek/rvx-apks",
+    "githubPattern": "Twitter",
+    "includePrereleases": true,
+    "category": "Social",
     "platform": "Android",
-    "size": "204 MB",
-    "author": "Crimera",
+    "size": "Varies",
+    "author": "ReVanced Team",
     "screenshots": [
-       "https://picsum.photos/seed/yt1/300/600",
-       "https://picsum.photos/seed/yt2/300/600"
+       "https://picsum.photos/seed/x1/300/600",
+       "https://picsum.photos/seed/x2/300/600"
+    ]
+  },
+  {
+    "id": "duolingo-revanced",
+    "name": "Duolingo ReVanced",
+    "description": "Duolingo ReVanced is a version of the official Duolingo Android app that incorporates patches from the open-source ReVanced project to add features not available in the standard free version, such as ad removal, unlimited hearts, and access to Super Duolingo features",
+    "icon": "https://logos-world.net/wp-content/uploads/2021/03/Duolingo-Logo.png",
+    "version": "1.0.0",
+    "latestVersion": "1.0.0",
+    "downloadUrl": "#",
+    "repoUrl": "https://github.com/revanced",
+    "githubRepo": "krvstek/rvx-apks",
+    "githubPattern": "Duolingo",
+    "includePrereleases": true,
+    "category": "Social",
+    "platform": "Android",
+    "size": "Varies",
+    "author": "ReVanced Team",
+    "screenshots": [
+       "https://picsum.photos/seed/x1/300/600",
+       "https://picsum.photos/seed/x2/300/600"
+    ]
+  },
+  {
+    "id": "reddit-revanced",
+    "name": "Reddit ReVanced",
+    "description": "Dive into the conversation without interruptions. Reddit ReVanced removes ads, sponsored posts, and unlocks premium icon features.",
+    "icon": "https://upload.wikimedia.org/wikipedia/en/thumb/b/bd/Reddit_Logo_Icon.svg/220px-Reddit_Logo_Icon.svg.png",
+    "version": "2024.16.0",
+    "latestVersion": "2024.16.0",
+    "downloadUrl": "#",
+    "repoUrl": "https://github.com/revanced",
+    "githubRepo": "krvstek/rvx-apks",
+    "githubPattern": "Reddit",
+    "includePrereleases": true,
+    "category": "Social",
+    "platform": "Android",
+    "size": "Varies",
+    "author": "ReVanced Team",
+    "screenshots": [
+       "https://picsum.photos/seed/reddit1/300/600",
+       "https://picsum.photos/seed/reddit2/300/600"
     ]
   },
   {
@@ -122,6 +167,27 @@
     "screenshots": [
         "https://picsum.photos/seed/devpc1/800/500",
         "https://picsum.photos/seed/devpc2/800/500"
+    ]
+  },
+  {
+    "id": "twitch-revanced",
+    "name": "Twitch ReVanced",
+    "description": "Watch your favorite streamers without ad interruptions. Twitch ReVanced blocks video ads, removes bloat, and offers cleaner chat.",
+    "icon": "https://img.freepik.com/premium-vector/twitch-logo_578229-259.jpg?semt=ais_hybrid&w=740&q=80",
+    "version": "18.0.0",
+    "latestVersion": "18.0.0",
+    "downloadUrl": "#",
+    "repoUrl": "https://github.com/revanced",
+    "githubRepo": "krvstek/rvx-apks",
+    "githubPattern": "Twitch",
+    "includePrereleases": true,
+    "category": "Media",
+    "platform": "Android",
+    "size": "Varies",
+    "author": "ReVanced Team",
+    "screenshots": [
+       "https://picsum.photos/seed/twitch1/300/600",
+       "https://picsum.photos/seed/twitch2/300/600"
     ]
   },
   {
