--- a/apps.json
+++ b/apps.json
@@ -92,9 +92,9 @@
     "id": "x-revanced",
     "name": "X ReVanced",
     "description": "The X app is the trusted global digital town square for everyone. ReVanced X removes ads and promoted posts for a clean timeline.",
-    "icon": "https://img.freepik.com/free-vector/new-2023-twitter-logo-x-icon-design_1017-45418.jpg",
-    "version": "1.0.0",
-    "latestVersion": "1.0.0",
+    "icon": "https://upload.wikimedia.org/wikipedia/commons/c/ce/X_logo_2023.svg",
+    "version": "10.0.0",
+    "latestVersion": "10.0.0",
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
     "githubRepo": "krvstek/rvx-apks",
@@ -102,7 +102,7 @@
     "includePrereleases": true,
     "category": "Social",
     "platform": "Android",
-    "size": "Varies",
+    "size": "90 MB",
     "author": "ReVanced Team",
     "screenshots": [
        "https://picsum.photos/seed/x1/300/600",
@@ -173,7 +173,7 @@
     "id": "twitch-revanced",
     "name": "Twitch ReVanced",
     "description": "Watch your favorite streamers without ad interruptions. Twitch ReVanced blocks video ads, removes bloat, and offers cleaner chat.",
-    "icon": "https://img.freepik.com/premium-vector/twitch-logo_578229-259.jpg?semt=ais_hybrid&w=740&q=80",
+    "icon": "https://upload.wikimedia.org/wikipedia/commons/d/dd/Twitch_Glitch_Logo_purple.svg",
     "version": "18.0.0",
     "latestVersion": "18.0.0",
     "downloadUrl": "#",
@@ -183,7 +183,7 @@
     "includePrereleases": true,
     "category": "Media",
     "platform": "Android",
-    "size": "Varies",
+    "size": "110 MB",
     "author": "ReVanced Team",
     "screenshots": [
        "https://picsum.photos/seed/twitch1/300/600",
