--- a/apps.json
+++ b/apps.json
@@ -170,7 +170,7 @@
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
     "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "twitter-piko",
+    "githubPattern": "twitter-stable-piko",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Social",
     "platform": "Android",
@@ -275,7 +275,7 @@
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
     "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "instagram-revanced",
+    "githubPattern": "instagram-arm64-v8a-revanced",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Social",
     "platform": "Android",
@@ -296,7 +296,7 @@
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
     "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "facebook-revanced",
+    "githubPattern": "facebook-arm64-v8a-revanced",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Social",
     "platform": "Android",
@@ -317,7 +317,7 @@
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
     "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "messenger-revanced",
+    "githubPattern": "messenger-arm64-v8a-revanced",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Social",
     "platform": "Android",
@@ -347,27 +347,6 @@
     "screenshots": [
       "https://picsum.photos/seed/spot1/300/600",
       "https://picsum.photos/seed/spot2/300/600"
-    ]
-  },
-  {
-    "id": "pinterest-revanced",
-    "name": "Pinterest ReVanced",
-    "description": "Explore ideas without ads. Removes promoted pins and ads from the home feed and search results.",
-    "icon": "https://upload.wikimedia.org/wikipedia/commons/0/08/Pinterest-logo.png",
-    "version": "Latest",
-    "latestVersion": "Latest",
-    "downloadUrl": "#",
-    "repoUrl": "https://github.com/revanced",
-    "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "pinterest-revanced",
-    "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
-    "category": "Social",
-    "platform": "Android",
-    "size": "Varies",
-    "author": "ReVanced Team",
-    "screenshots": [
-      "https://picsum.photos/seed/pin1/300/600",
-      "https://picsum.photos/seed/pin2/300/600"
     ]
   },
   {
@@ -401,7 +380,7 @@
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
     "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "threads-revanced",
+    "githubPattern": "threads-arm64-v8a-revanced",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Social",
     "platform": "Android",
@@ -422,7 +401,7 @@
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
     "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "telegram",
+    "githubPattern": "telegram-web-version-revanced-experiments",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Social",
     "platform": "Android",
@@ -485,7 +464,7 @@
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
     "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "google-news-revanced",
+    "githubPattern": "googlenews-arm64-v8a-revanced",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Utility",
     "platform": "Android",
@@ -527,7 +506,7 @@
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
     "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "proton-mail-revanced",
+    "githubPattern": "protonmail-revanced",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Privacy",
     "platform": "Android",
@@ -548,7 +527,7 @@
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
     "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "strava-revanced",
+    "githubPattern": "strava-arm64-v8a-revanced",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Social",
     "platform": "Android",
@@ -590,7 +569,7 @@
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
     "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "bili-roaming",
+    "githubPattern": "bilibili-BiliRoamingM",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Media",
     "platform": "Android",
@@ -611,7 +590,7 @@
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
     "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "prime-video-revanced",
+    "githubPattern": "prime-video-arm64-v8a-revanced",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Media",
     "platform": "Android",
@@ -644,6 +623,27 @@
     ]
   },
   {
+    "id": "crunchyroll-revanced",
+    "name": "Crunchyroll ReVanced",
+    "description": "Enjoy Anime and Manga with Most of the Premium Features unlocked.",
+    "icon": "https://upload.wikimedia.org/wikipedia/commons/f/f5/Viber_logo_2018.svg",
+    "version": "Latest",
+    "latestVersion": "Latest",
+    "downloadUrl": "#",
+    "repoUrl": "https://github.com/revanced",
+    "githubRepo": "geologically/revanced-builder",
+    "githubPattern": "crunchyroll-revanced",
+    "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
+    "category": "Social",
+    "platform": "Android",
+    "size": "Varies",
+    "author": "ReVanced Team",
+    "screenshots": [
+       "https://picsum.photos/seed/viber1/300/600",
+       "https://picsum.photos/seed/viber2/300/600"
+    ]
+  },
+  {
     "id": "solid-explorer-revanced",
     "name": "Solid Explorer ReVanced",
     "description": "File management made beautiful. Unlocks the full version license check (scrazzz patch).",
@@ -653,7 +653,7 @@
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
     "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "solid-explorer-scrazzz",
+    "githubPattern": "solid-explorer-arm64-v8a-scrazzz",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Utility",
     "platform": "Android",
@@ -716,7 +716,7 @@
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
     "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "fx-file-explorer-revanced",
+    "githubPattern": "fx-file-explorer-indrastorms",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Utility",
     "platform": "Android",
