--- a/apps.json
+++ b/apps.json
@@ -170,7 +170,7 @@
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
     "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "twitter-stable-piko",
+    "githubPattern": "twitter-piko",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Social",
     "platform": "Android",
@@ -275,7 +275,7 @@
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
     "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "instagram-arm64-v8a-revanced",
+    "githubPattern": "instagram-revanced",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Social",
     "platform": "Android",
@@ -296,7 +296,7 @@
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
     "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "facebook-arm64-v8a-revanced",
+    "githubPattern": "facebook-revanced",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Social",
     "platform": "Android",
@@ -317,7 +317,7 @@
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
     "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "messenger-arm64-v8a-revanced",
+    "githubPattern": "messenger-revanced",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Social",
     "platform": "Android",
@@ -380,7 +380,7 @@
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
     "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "threads-arm64-v8a-revanced",
+    "githubPattern": "threads-revanced",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Social",
     "platform": "Android",
@@ -401,7 +401,7 @@
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
     "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "telegram-web-version-revanced-experiments",
+    "githubPattern": "telegram",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Social",
     "platform": "Android",
@@ -464,7 +464,7 @@
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
     "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "googlenews-arm64-v8a-revanced",
+    "githubPattern": "googlenews-revanced",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Utility",
     "platform": "Android",
@@ -527,7 +527,7 @@
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
     "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "strava-arm64-v8a-revanced",
+    "githubPattern": "strava-revanced",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Social",
     "platform": "Android",
@@ -569,7 +569,7 @@
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
     "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "bilibili-BiliRoamingM",
+    "githubPattern": "bilibili",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Media",
     "platform": "Android",
@@ -590,7 +590,7 @@
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
     "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "prime-video-arm64-v8a-revanced",
+    "githubPattern": "prime-video-revanced",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Media",
     "platform": "Android",
@@ -626,7 +626,7 @@
     "id": "crunchyroll-revanced",
     "name": "Crunchyroll ReVanced",
     "description": "Enjoy Anime and Manga with Most of the Premium Features unlocked.",
-    "icon": "https://upload.wikimedia.org/wikipedia/commons/f/f5/Viber_logo_2018.svg",
+    "icon": "https://upload.wikimedia.org/wikipedia/commons/thumb/2/22/Crunchyroll_Logo.png/800px-Crunchyroll_Logo.png",
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
@@ -634,13 +634,13 @@
     "githubRepo": "geologically/revanced-builder",
     "githubPattern": "crunchyroll-revanced",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
-    "category": "Social",
+    "category": "Media",
     "platform": "Android",
     "size": "Varies",
     "author": "ReVanced Team",
     "screenshots": [
-       "https://picsum.photos/seed/viber1/300/600",
-       "https://picsum.photos/seed/viber2/300/600"
+       "https://picsum.photos/seed/crunchy1/300/600",
+       "https://picsum.photos/seed/crunchy2/300/600"
     ]
   },
   {
@@ -653,7 +653,7 @@
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
     "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "solid-explorer-arm64-v8a-scrazzz",
+    "githubPattern": "solid-explorer",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Utility",
     "platform": "Android",
@@ -674,7 +674,7 @@
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
     "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "nova-launcher-indrastorms",
+    "githubPattern": "nova-launcher",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Utility",
     "platform": "Android",
@@ -695,7 +695,7 @@
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
     "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "tasker-indrastorms",
+    "githubPattern": "tasker",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Utility",
     "platform": "Android",
@@ -716,7 +716,7 @@
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
     "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "fx-file-explorer-indrastorms",
+    "githubPattern": "fx-file-explorer",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Utility",
     "platform": "Android",
