--- a/apps.json
+++ b/apps.json
@@ -317,7 +317,7 @@
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
     "githubRepo": "geologically/revanced-builder",
-    "githubPattern": "messenger-revanced",
+    "githubPattern": "messenger-?revanced",
     "githubAssetPriority": ["universal", "arm64-v8a", "armeabi-v7a"],
     "category": "Social",
     "platform": "Android",
